# double-jeopardy-in-llms

./: CITATION.cff  README.md  pyproject.toml
.github/workflows/: release.yml
data/: README.md
docs/: _config.yml
notebooks/: analysis.ipynb  back-translation-task.ipynb  compute-premium-costs.ipynb  identify-languages-by-income-level.ipynb  language-tokenizers.ipynb  sentence-joint-probability.ipynb
scripts/: consolidate_flores.py  test_flores.py
src/llm_lang/: flores200p.py  utils.py  worldbank.py
src/llm_lang/assets/: flores200_langs.py
