[tool.poetry]
name = "llm-lang"
version = "0.1.0"  # Version needs to be statically defined in Poetry, can be updated as needed.
description = "A repository for the analysis of economic implications of LLMs driven by low-resource languages and spatial factors."
authors = [
    "Aivin V. Solatorio <asolatorio@worldbank.org>",
    "Gabriel Stefanini Vicente <gvicente@worldbank.org>"
]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://github.com/"
repository = "https://github.com/"
documentation = ""  # If you have a documentation URL, put it here.
keywords = ["AI", "LLMs", "economic implications", "low-resource languages", "spatial factors", "development data", "World Bank"]

classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = ">=3.10"
requests = "^2.28.1"
pandas = "^2"
docutils = {version = "0.20.1", optional = true}
jupyter-book = {version = ">=1,<2", optional = true}
datasets = "^2.18.0"
tiktoken = "^0.6.0"
fire = "^0.5.0"

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
docs = ["docutils", "jupyter-book"]

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

